--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic/angular": "^4.11.10",
     "cordova-android": "^8.1.0",
     "core-js": "^2.6.11",
+    "ngx-socket-io": "^3.0.1",
     "rxjs": "^6.5.4",
     "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
