--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/core": "^5.23.0",
-    "@ionic-native/social-sharing": "^5.23.0",
-    "@ionic-native/splash-screen": "^5.23.0",
-    "@ionic-native/status-bar": "^5.23.0",
+    "@ionic-native/core": "^5.24.0",
+    "@ionic-native/social-sharing": "^5.24.0",
+    "@ionic-native/splash-screen": "^5.24.0",
+    "@ionic-native/status-bar": "^5.24.0",
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
+    "@types/jquery": "^3.3.36",
     "cordova-android": "^8.1.0",
     "cordova-ios": "^5.1.1",
-    "cordova-plugin-x-socialsharing": "^5.6.4",
-    "cordova-res": "^0.12.0",
+    "cordova-plugin-x-socialsharing": "^5.6.5",
+    "cordova-res": "^0.12.2",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.6.11",
+    "ionic-selectable": "^4.5.0",
+    "jquery": "^3.5.0",
     "ngx-socket-io": "^3.0.1",
+    "node-sass": "^4.14.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
@@ -64,7 +68,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
